global font + navbar-collapse alignement + reponsive fix

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -12,6 +12,15 @@
        url('../../assets/fonts/BrandonGrotesque-RegularItalic.otf') format('truetype');
 }
 
+@font-face {
+  font-family: "BrandonText";
+  src: url("../../assets/fonts/BrandonText-Bold.otf");
+  src: url("../../assets/fonts/BrandonText-Bold.otf") format('truetype'),
+       url("../../assets/fonts/BrandonText-Regular.otf") format('truetype'),
+       url("../../assets/fonts/BrandonText-RegularItalic.otf") format('truetype'),
+       url("../../assets/fonts/BrandonText-BoldItalic.otf") format('truetype');
+}
+
 $logoutColor: #6D737D;
 $IOColor: #FCA000;
 $secondaryColor: #989898;
@@ -30,6 +39,7 @@ table, th, td {
 }
 
 body {
+  font-family: BrandonText, serif;
   font-size: 16pt;
   color: black;
 }
@@ -95,30 +105,36 @@ nav {
   right: 1vw;
 }
 
-.div-deco{
+.adminLogout{
   margin-left: 70vw;
 }
 
-@media (min-width:990px){
-  .div-deco{
+@media (max-width:991px){
+  .adminLogout{
+    margin-left: 1vw;
+  }
+}
+
+@media (min-width:992px){
+  .adminLogout{
     margin-left: 60vw;
   }
 }
 
 @media (min-width:1135px){
-  .div-deco{
+  .adminLogout{
     margin-left: 65vw;
   }
 }
 
 @media (min-width:1330px){
-  .div-deco{
+  .adminLogout{
     margin-left: 70vw;
   }
 }
 
 @media (min-width:1600px){
-  .div-deco{
+  .adminLogout{
     margin-left: 75vw;
   }
 }
@@ -136,4 +152,5 @@ a:hover {
   min-width: 100vw;
   max-width: 100vw;
   margin-left: -17px;
+
 }
